--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
   /* overflow-y: hidden;  */
   align-items: center;
 }
@@ -47,7 +47,6 @@ header {
   font-weight: 600;
   line-height: 24px;
   padding: 0rem 1rem;
-  
 }
 .menu_item {
   display: flex;
@@ -77,16 +76,16 @@ header {
 /* Media query for small screens (e.g., mobile) */
 @media screen and (max-width: 768px) {
   .menu_item p {
-      display: none;
+    display: none;
   }
 
   .dropdown-button {
-      display: block;
+    display: block;
   }
 }
 /* .menu_item button {
   /* width: 100%; */
-  /* height: 100%; 
+/* height: 100%; 
   padding-left: 16px;
   /* padding-right: 16px;
   padding-top: 8px;
@@ -100,8 +99,7 @@ header {
 }*/
 /* Light Theme Styles */
 body.light,
-header.light
- {
+header.light {
   background-color: #f5f5f5;
   color: #333;
 }
@@ -184,7 +182,7 @@ input:checked + .slider:before {
   align-items: center;
   display: inline-flex;
 }
-.blog{
+.blog {
   width: auto;
   height: auto;
 }
@@ -193,13 +191,11 @@ input:checked + .slider:before {
     font-size: 140.8px;
     /* font-weight: 500; */
     text-align: center;
-
   }
 }
-@media (max-width:768px) {
-  .heading{
+@media (max-width: 768px) {
+  .heading {
     font-size: 72px;
-    
   }
 }
 
@@ -212,6 +208,7 @@ input:checked + .slider:before {
   line-height: 32px;
   word-wrap: break-word;
   padding: 0px 16px;
+  margin-left: 3em;
 }
 .section1 {
   padding: 2rem;
@@ -227,33 +224,31 @@ input:checked + .slider:before {
 }
 .sec1_ {
   /* width: 100%; */
-  
-  /* height: 229px; */
-  /* display: inline-flex; */
+
+  /* height: 432px; */
+  /* align-items: flex-start; */
+  display: flex;
   /* justify-content: center; */
-  padding: 1.5rem;
+  /* padding: 1.5rem; */
 }
-@media (max-width:768px) {
-  .sec1_img1 img{
+@media (max-width: 768px) {
+  .sec1_img1 img {
     width: 320px;
-  
   }
 }
-@media (max-width:768px) {
+@media (max-width: 768px) {
   .sec1_img1 {
-    display:flex;
+    display: flex;
     justify-content: center;
-    
   }
 }
-@media (max-width:1024px) {
-  .sec1_img1 img{
+@media (max-width: 1024px) {
+  .sec1_img1 img {
     width: 720px;
-  
   }
 }
 
-.sec1_img1 img{
+.sec1_img1 img {
   width: 100%;
   align-items: center;
   justify-content: center;
@@ -263,23 +258,26 @@ input:checked + .slider:before {
   height: 100%;
   align-items: center;
   gap: 20px;
-  
+}
+.sec2 {
+  /* height: 229px; */
 }
 
 .sec2 img {
   width: 50%;
-  object-fit: contain;
+  height: 100%;
+  object-fit: fill;
 }
 .sec2_content {
   padding: 0rem 1rem;
 }
 .sec2_1 {
   display: flex;
-  padding-bottom: 1rem;
+  /* padding-bottom: 1rem; */
 }
 .sec2_2 {
   display: flex;
-  padding-bottom: 1rem;
+  /* padding-bottom: 1rem; */
 }
 
 .date {
@@ -294,8 +292,10 @@ input:checked + .slider:before {
 }
 .sec_heading {
   /* width: 100%; */
-  align-items: center;
-  justify-content: center;
+  display: flex;
+  align-items: flex-start;
+
+  justify-content: space-between;
   color: #1a1a1a;
   font-size: 24px;
   font-family: Inter;
@@ -313,7 +313,6 @@ input:checked + .slider:before {
   line-height: 24px;
   word-wrap: break-word;
   align-items: center;
-
 }
 .categories {
   /* width: 100%; */
@@ -349,50 +348,48 @@ input:checked + .slider:before {
   gap: 20px;
   padding: 2rem;
 }
-.sec2_img1{
+.sec2_img1 {
   width: 100%;
   padding: 10px;
 }
-@media (max-width:1024px) {
-  .sec2_img1 img{
+@media (max-width: 1024px) {
+  .sec2_img1 img {
     width: 770px;
   }
 }
-@media (max-width:768px) {
-  .sec2_img1 img{
+@media (max-width: 768px) {
+  .sec2_img1 img {
     width: 100%;
-      }
+  }
 }
 @media (max-width: 1024px) {
   .section2 {
     flex-wrap: wrap;
   }
 }
-.section3{
-    display: flex;
-    flex-wrap: wrap; 
-    padding: 10px;
-    /* justify-content: space-between; */
-    /* max-width: 100%; */
+.section3 {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
+  /* justify-content: space-between; */
+  /* max-width: 100%; */
 }
 
-  .sec3{
-    width: calc(33.33% - 20px);
-    margin: 10px;
-    padding: 20px;
-    text-align: center;
-    /* box-sizing: border-box; */
-  }
+.sec3 {
+  width: calc(33.33% - 20px);
+  margin: 10px;
+  padding: 20px;
+  text-align: center;
+  /* box-sizing: border-box; */
+}
 
-  @media  (max-width:1024px) {
-    .sec3 {
-        width: calc(50% - 20px);
-      
-    }
-   
+@media (max-width: 1024px) {
+  .sec3 {
+    width: calc(50% - 20px);
   }
-  @media  (max-width:768px) {
-    .sec3 {
-        width: 100%;
-    }
+}
+@media (max-width: 768px) {
+  .sec3 {
+    width: 100%;
   }
+}
